# tensorrt-alpha-ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/tensorrt_alpha_ros/: efficientdet.h  facemesh.h  libfacedetection.h  network.h  pphunmanseg.h  tensorrt_alpha_ros.h  u2net.h  ufldv2.h
include/tensorrt_alpha_ros/utils/: common_include.h  kernel_function.h  utils.h
include/tensorrt_alpha_ros/yolo/: yolo.h  yolor.h  yolov4.h  yolov5.h  yolov7.h  yolov8.h
launch/: tensorrt_alpha.launch
src/: tensorrt_alpha_ros.cpp  tensorrt_alpha_ros_node.cpp
src/utils/: kernel_function.cu  utils.cpp
src/yolo/: decode_yolov4.cu  decode_yolov8.cu  yolo.cpp  yolor.cpp  yolov4.cpp  yolov5.cpp  yolov7.cpp  yolov8.cpp
